# practice

./: .gitignore  README.md  poetry.toml  pyproject.toml
practice/bits_and_bytes/: binary.py
scripts/: runLinters.ps1  runUnitTests.ps1  setupDevEnv.ps1
tests/bits_and_bytes/: test_binary.py
