[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Lane Taylor <lanetaylor970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.14.0"
ruff = "^0.8.4"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.autopep8]
ignore = ["E402"]
max-line-length = 120

[tool.pytest.ini_options]
addopts = [
    "-v",
]
pythonpath = [
    "practice",
    ".",
]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = false
strict_equality = true
extra_checks = true
explicit_package_bases = true
check_untyped_defs = true
#; disallow_incomplete_defs = true
#; disallow_subclassing_any = true
#; disallow_untyped_decorators = true
#; #disallow_any_generics = true
#; disallow_untyped_calls = true
#; disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "crc8.*",
]
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "mnav-ups-daemon3",
    "stealth-clinical-application",
]

target-version = "py311"

[tool.coverage.run]
branch = true

omit = [
    # Omit the files generated by opencv for Python
    "config.py",
    "config-3.py",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["PL", "E", "F", "Q", "B", "D"]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0913",
    "PLR0911",
    "PLR0915",
    "E501",
    "Q000",
    "Q002",
    "Q001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D203", 
    "D204",
    "D208",
    "D205",
    "D212",
    "D300",
    "D301",
    "D401",
    "D407",
    "D415",
    "D400",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLW0603", "PLR0913", "PLW0602", "D"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
